--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -106,6 +106,15 @@ a {
   color: rgb(67, 6, 57);
 }
 
+#burger {
+  display: none;
+  color: #2c0526;
+  font-size: 32px;
+  line-height: 30px;
+}
+
+
+
 .header {
   background: #e2dfe0;
   padding: 30px 0;
@@ -123,6 +132,10 @@ a {
 
     .header-menu {
       display: flex;
+
+      &.open-menu {
+        display: flex;
+      }
 
       .header-menu-item {
         font-size: 13px;
@@ -239,6 +252,7 @@ a {
 .products {
   padding-bottom: 115px;
   position: relative;
+  overflow: hidden;
 
   .products-bg {
     position: absolute;
@@ -338,6 +352,7 @@ a {
   background: #f5f4f3;
   padding: 170px 0 206px;
   position: relative;
+  overflow: hidden;
 
   img {
     max-width: 100%;
@@ -429,6 +444,7 @@ a {
         overflow: hidden;
         border-radius: 8px;
         margin: 0 auto;
+        position: relative;
 
         img {
           max-width: 100%;
@@ -530,8 +546,7 @@ a {
 
   .gallery-text {
     max-width: 685px;
-    margin-bottom: 45px;
-    margin-top: 30px;
+    margin: 30px 0 45px;
     font-size: 16px;
     line-height: 1.313;
   }
